k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: painel-tools
  annotations:
    kubernetes.digitalocean.com/load-balancer-id: "a4f9a238d47744727853db5ee466f342"
    service.beta.kubernetes.io/do-loadbalancer-size-unit: "3"
    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "true"
spec:
  type: LoadBalancer
  selector:
    app: app-tools
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
